# lhrc

./: .gitignore  README.md
android/: README.md  build.gradle
android/android/view/: annotations.xml
android/app/: CMakeLists.txt  build.gradle
android/app/release/: app-arm64-v8a-release.apk  output.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: rect.rgba  rocker_bg.rgba  rocker_btn.rgba
android/app/src/main/cpp/: Native.cpp  audioPlayer.cpp  audioPlayer.h  deskTopDraw.cpp  deskTopDraw.h
android/app/src/main/cpp/cryptopp/: e2eeMgr.cpp  e2eeMgr.h  rc4.cpp  rc4.h
android/app/src/main/cpp/gl/: DynamicLibrary.cpp  GLbase.cpp  GLbase.h  GraphicBuffer.h  Renderer.cpp  Renderer.h  TextureRGB.cpp  TextureRGB.h  TextureYUV.cpp  TextureYUV.h  gl.rar
android/app/src/main/cpp/network/: ikcp.c  ikcp.h  p2p_udp.cpp  p2p_udp.h  syncSendMgr.cpp  syncSendMgr.h  udpArqHelp.cpp  udpArqHelp.h  udphelplib.cpp  udphelplib.h
android/app/src/main/cpp/publicbase/: MD5.cpp  MD5.h  baseFunc.cpp  baseFunc.h  def.h  h264Decode.cpp  h264Decode.h  threadPool.cpp  threadPool.h
android/app/src/main/cpp/rocker/: rockerMgr.cpp  rockerMgr.h
android/app/src/main/cpp/serverAgent/: baseInfo.cpp  clientAgent.cpp  clientAgent.h  proxyClient.cpp  proxyClient.h  stdafx.h
android/app/src/main/java/com/example/lb/lbrocker/: ZoomView.java  webbase.java
android/app/src/main/java/com/example/lb/lbrocker/GameActivity/: AvcPlayer.java  GameActivity.java  MediaCodecHelper.java  eventInterface.java  glMgr.java  uiMgr.java
android/app/src/main/java/com/example/lb/lbrocker/zbar/: CaptureActivity.java
android/app/src/main/java/com/example/lb/lbrocker/zbar/camera/: AutoFocusManager.java  CameraConfigurationManager.java  CameraManager.java  CameraPreview.java  PreviewCallback.java
android/app/src/main/java/com/example/lb/lbrocker/zbar/decode/: DecodeHandler.java  DecodeThread.java  MainHandler.java
android/app/src/main/java/com/example/lb/lbrocker/zbar/utils/: BeepManager.java  Config.java
android/app/src/main/java/com/example/lb/lbrocker/zbar/view/: ScanLineView.java
android/app/src/main/res/layout/: activity_capture.xml  activity_game_land.xml
android/app/src/main/res/layout-land/: activity_game_land.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
